--- a/WebDemo.ViewModels/WebDemo.ViewModels.csproj
+++ b/WebDemo.ViewModels/WebDemo.ViewModels.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3AD926F8-7974-47C0-98EF-F8D54D28358C}</ProjectGuid>
+    <ProjectGuid>{F6BFC3BF-3124-4856-823A-8E6BA89F36DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebDemo.Services</RootNamespace>
-    <AssemblyName>WebDemo.Services</AssemblyName>
+    <RootNamespace>WebDemo.ViewModels</RootNamespace>
+    <AssemblyName>WebDemo.ViewModels</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,18 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.0.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\packages\Autofac.4.0.1\lib\net45\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
-    </Reference>
-    <Reference Include="AutoMapper.Collection, Version=3.1.3.0, Culture=neutral, PublicKeyToken=e57c3f0a3d6646db, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.Collection.3.1.3\lib\net45\AutoMapper.Collection.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,26 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IUserService.cs" />
-    <Compile Include="Profiles\MapperProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceModule.cs" />
-    <Compile Include="UserService.cs" />
+    <Compile Include="UserModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WebDemo.Models\WebDemo.Models.csproj">
-      <Project>{b4aa3ef9-9128-4f85-a196-501130ca4a31}</Project>
-      <Name>WebDemo.Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebDemo.ViewModels\WebDemo.ViewModels.csproj">
-      <Project>{f6bfc3bf-3124-4856-823a-8e6ba89f36dd}</Project>
-      <Name>WebDemo.ViewModels</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
